# 180dconvert

./: .gitignore  180dconvert.py  NOTICE  README.md  Start_GUI_Linux.sh  Start_GUI_Windows.bat  Start_Linux.sh  Start_Windows.bat  app.py  healforcescpecg.py  hf180d.py  pyproject.toml
.streamlit/: config.toml
docs/: format-analysis.md
